@@ -500,7 +500,9 @@ if(libtype=="PE"){
 
 ### Quantification location heatmap
 
-Heatmap of the well-covered locations on the reference genome. With well-covered, we mean here that the total read coverage ("the row-sums") should be larger than the total number of used samples, so that we have on the average at least one read per sample, here it is `r nrow(fc.quant.high)`
+Heatmap of the well-covered locations on the reference genome. With well-covered, we mean here that the total read coverage ("the row-sums") should be larger than the total number of used samples, so that we have on the average at least one read per sample, here it is `r nrow(fc.quant.high)`.
+
+Do reduce the number of clusters in the figure, we apply here first a clustering for the coverage locations and then feed the reduced data into the heatmap.
 
 ```{r, fig.width=10, eval=FALSE}
 # Perform hierarchical clustering
